Tweak javascript build to make npm better
Build into 'javascript' dir and tell package.json exactly which files we care
about.

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "An implementation of a well known cryptographic ratchet",
   "main": "olm.js",
+  "files": [
+    "olm.js",
+    "README.md"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
