--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 build
+.DS_Store
+build
+*.mode1v3
+*.pbxuser
+project.xcworkspace
+xcuserdata
+.svn
+DerivedData
+*.orig
+*.xccheckout
+
+xcode/Pods/
