--- a/javascript/package.json
+++ b/javascript/package.json
@@ -8,6 +8,7 @@
     "README.md"
   ],
   "scripts": {
+    "build": "./build.py",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
