Add support for building the JS wrappers to the Makefile
Now that we have C and C++, we need to split the compile and link steps
(because we need different flags for the C and C++ files), so this is
easier with a Makefile.

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -8,7 +8,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "./build.py",
+    "build": "make -C .. js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
