--- a/javascript/package.json
+++ b/javascript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "olm",
   "version": "1.2.0",
-  "description": "An implementation of a well known cryptographic ratchet",
+  "description": "An implementation of the Double Ratchet cryptographic ratchet",
   "main": "olm.js",
   "files": [
     "olm.js",
