- Update Unit tests for OlmAccount  - new file olm_utility.cpp to have a stand alone function to initialize/alloc a random buffer  - new class OlmMessage  - complete OlmSession API with encryptMessage()  - comments review  - OlmAccount unit tests are green  - new gradle to compile the shared lib according to debug mode

--- a/java/android/OlmLibSdk/olm-sdk/build.gradle
+++ b/java/android/OlmLibSdk/olm-sdk/build.gradle
@@ -24,9 +24,16 @@ android {
         jni.srcDirs = []
     }
 
-    task ndkBuildNative(type: Exec, description: 'NDK building..') {
+    task ndkBuildNativeRelease(type: Exec, description: 'NDK building..') {
+        println 'ndkBuildNativeRelease starts..'
         workingDir file('src/main')
-        commandLine getNdkBuildCmd() //, '-B', 'NDK_DEBUG=1'
+        commandLine getNdkBuildCmd(), 'NDK_DEBUG=0'
+    }
+
+    task ndkBuildNativeDebug(type: Exec, description: 'NDK building..') {
+        println 'ndkBuildNativeDebug starts..'
+        workingDir file('src/main')
+        commandLine getNdkBuildCmd(), 'NDK_DEBUG=1'
     }
 
     task cleanNative(type: Exec, description: 'Clean NDK build') {
@@ -34,9 +41,20 @@ android {
         commandLine getNdkBuildCmd(), 'clean'
     }
 
-    tasks.withType(JavaCompile) {
+    /*tasks.withType(JavaCompile) {
         compileTask -> compileTask.dependsOn ndkBuildNative
+    }*/
+
+    tasks.withType(JavaCompile) {
+        compileTask -> if (compileTask.name.startsWith('compileDebugJava')) {
+            println 'test compile: Debug'
+            compileTask.dependsOn ndkBuildNativeDebug
+        } else if (compileTask.name.startsWith('compileReleaseJava')) {
+            println 'test compile: Release'
+            compileTask.dependsOn ndkBuildNativeRelease
+        }
     }
+
 
     clean.dependsOn cleanNative
 
