--- a/javascript/package.json
+++ b/javascript/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "make -C .. js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-node test --verbose --junitreport --captureExceptions"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/matrix-org/olm/issues"
   },
-  "homepage": "https://github.com/matrix-org/olm#readme"
+  "homepage": "https://github.com/matrix-org/olm#readme",
+  "devDependencies": {
+    "jasmine-node": "^1.14.5"
+  }
 }
