--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -17,3 +17,5 @@ systemProp.https.proxyPort=8080
 systemProp.http.proxyHost=batproxy
 systemProp.https.proxyHost=batproxy
 systemProp.http.proxyPort=8080
+
+org.gradle.configureondemand=false
