--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -13,9 +13,10 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Wed Oct 05 11:49:34 CEST 2016
-systemProp.https.proxyPort=8080
-systemProp.http.proxyHost=batproxy
-systemProp.https.proxyHost=batproxy
-systemProp.http.proxyPort=8080
+
+#systemProp.https.proxyPort=8080
+#systemProp.http.proxyHost=batproxy
+#systemProp.https.proxyHost=batproxy
+#systemProp.http.proxyPort=8080
 
 org.gradle.configureondemand=false
