...in the right dir

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
           command: make js
       - run:
           name: Install JS Deps
+          working_directory: ~/repo/javascript
           command: npm install
       - run:
           name: JS Tests
