--- a/python/Makefile
+++ b/python/Makefile
@@ -1,41 +1,41 @@
-PYTHON   ?= python
-
-all: olm
+all: olm-python2 olm-python3
 
 include/olm/olm.h: ../include/olm/olm.h ../include/olm/inbound_group_session.h ../include/olm/outbound_group_session.h
 	mkdir -p include/olm
 	$(CPP) -I dummy -I ../include ../include/olm/olm.h -o include/olm/olm.h
 
-olm: include/olm/olm.h
-	DEVELOP=$(DEVELOP) $(PYTHON) setup.py build
+olm-python2: include/olm/olm.h
+	DEVELOP=$(DEVELOP) python2 setup.py build
 
-install: olm
-	$(PYTHON) setup.py install --skip-build -O1 --root=$(DESTDIR)
+olm-python3: include/olm/olm.h
+	DEVELOP=$(DEVELOP) python3 setup.py build
 
-test: develop py2develop
-	python3 -m pytest
-	python2 -m pytest
-	python3 -m pytest --flake8 --benchmark-disable
-	python3 -m pytest --isort --benchmark-disable
-	python3 -m pytest --cov --cov-branch --benchmark-disable
+install: install-python2 install-python3
+
+install-python2: olm-python2
+	python2 setup.py install --skip-build -O1 --root=$(DESTDIR)
+
+install-python3: olm-python3
+	python3 setup.py install --skip-build -O1 --root=$(DESTDIR)
+
+test: olm-python2 olm-python3
+	rm -rf install-temp
+	mkdir -p install-temp/2 install-temp/3
+	PYTHONPATH=install-temp/2 python2 setup.py install --skip-build --install-lib install-temp/2 --install-script install-temp/bin
+	PYTHONPATH=install-temp/3 python3 setup.py install --skip-build --install-lib install-temp/3 --install-script install-temp/bin
+	PYTHONPATH=install-temp/3 python3 -m pytest
+	PYTHONPATH=install-temp/2 python2 -m pytest
+	PYTHONPATH=install-temp/3 python3 -m pytest --flake8 --benchmark-disable
+	PYTHONPATH=install-temp/3 python3 -m pytest --isort --benchmark-disable
+	PYTHONPATH=install-temp/3 python3 -m pytest --cov --cov-branch --benchmark-disable
+	rm -rf install-temp
 
 clean:
-	-rm -r python_olm.egg-info/ dist/ __pycache__/
-	-rm *.so _libolm.o
-	-rm -r packages/
-	-rm -r build/
+	rm -rf python_olm.egg-info/ dist/ __pycache__/
+	rm -rf *.so _libolm.o
+	rm -rf packages/
+	rm -rf build/
+	rm -rf install-temp/
+	rm -rf include/
 
-develop: _libolm.o
-py2develop: _libolm.so
-
-_libolm.so: DEVELOP ?= 1
-_libolm.so: include/olm/olm.h olm_build.py
-	DEVELOP=$(DEVELOP) python2 olm_build.py
-	-rm _libolm.c
-
-_libolm.o: DEVELOP ?= 1
-_libolm.o: include/olm/olm.h olm_build.py
-	DEVELOP=$(DEVELOP) python3 olm_build.py
-	-rm _libolm.c
-
-.PHONY: all olm install clean test develop
+.PHONY: all olm-python2 olm-python3 install install-python2 install-python3 clean test
