--- a/python/Makefile
+++ b/python/Makefile
@@ -1,15 +1,21 @@
 all: olm-python2 olm-python3
 
-include/olm/olm.h: ../include/olm/olm.h ../include/olm/inbound_group_session.h ../include/olm/outbound_group_session.h
+OLM_HEADERS = ../include/olm/olm.h ../include/olm/inbound_group_session.h \
+	      ../include/olm/outbound_group_session.h \
+
+include/olm/olm.h: $(OLM_HEADERS)
 	mkdir -p include/olm
 	$(CPP) -I dummy -I ../include ../include/olm/olm.h -o include/olm/olm.h
 # add memset to the header so that we can use it to clear buffers
 	echo 'void *memset(void *s, int c, size_t n);' >> include/olm/olm.h
 
-olm-python2: include/olm/olm.h
+include/olm/pk.h: include/olm/olm.h ../include/olm/pk.h
+	$(CPP) -I dummy -I ../include ../include/olm/pk.h -o include/olm/pk.h
+
+olm-python2: include/olm/olm.h include/olm/pk.h
 	DEVELOP=$(DEVELOP) python2 setup.py build
 
-olm-python3: include/olm/olm.h
+olm-python3: include/olm/olm.h include/olm/pk.h
 	DEVELOP=$(DEVELOP) python3 setup.py build
 
 install: install-python2 install-python3
