python: Build the build headers with setup.py.
This allows downstream users to install this python module with pip as
well as allowing people to declare it as a dependency in their setup.py.

Signed-off-by: Damir Jelić <poljar@termina.org.uk>

--- a/python/Makefile
+++ b/python/Makefile
@@ -12,10 +12,12 @@ include/olm/olm.h: $(OLM_HEADERS)
 include/olm/pk.h: include/olm/olm.h ../include/olm/pk.h
 	$(CPP) -I dummy -I ../include ../include/olm/pk.h -o include/olm/pk.h
 
-olm-python2: include/olm/olm.h include/olm/pk.h
+headers: include/olm/olm.h include/olm/pk.h
+
+olm-python2: headers
 	DEVELOP=$(DEVELOP) python2 setup.py build
 
-olm-python3: include/olm/olm.h include/olm/pk.h
+olm-python3: headers
 	DEVELOP=$(DEVELOP) python3 setup.py build
 
 install: install-python2 install-python3
