--- a/python/Makefile
+++ b/python/Makefile
@@ -5,15 +5,15 @@ OLM_HEADERS = ../include/olm/olm.h ../include/olm/inbound_group_session.h \
 
 include/olm/olm.h: $(OLM_HEADERS)
 	mkdir -p include/olm
-	$(CPP) -I dummy -I ../include ../include/olm/olm.h -o include/olm/olm.h
+	$(CPP) -I dummy -I ../include -o include/olm/olm.h ../include/olm/olm.h
 # add memset to the header so that we can use it to clear buffers
 	echo 'void *memset(void *s, int c, size_t n);' >> include/olm/olm.h
 
 include/olm/pk.h: include/olm/olm.h ../include/olm/pk.h
-	$(CPP) -I dummy -I ../include ../include/olm/pk.h -o include/olm/pk.h
+	$(CPP) -I dummy -I ../include -o include/olm/pk.h ../include/olm/pk.h
 
 include/olm/sas.h: include/olm/olm.h ../include/olm/sas.h
-	$(CPP) -I dummy -I ../include ../include/olm/sas.h -o include/olm/sas.h
+	$(CPP) -I dummy -I ../include -o include/olm/sas.h ../include/olm/sas.h
 
 headers: include/olm/olm.h include/olm/pk.h include/olm/sas.h
 
