rename npm package to @matrix-org/olm
to be published via our gitlab repository

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 /olm-*.tgz
 /README.html
 /tracing/README.html
+/python/dist
+/javascript/checksums.txt
+/javascript/checksums.txt.asc
 
 # Xcode
 build/
