python: remove tox basepython configuration

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -1,14 +1,8 @@
 # content of: tox.ini , put in same dir as setup.py
 [tox]
 envlist = py27,py36,pypy,{py2,py3}-cov,coverage
-[testenv]
-basepython =
-    py27: python2.7
-    py36: python3.6
-    pypy: pypy
-    py2: python2.7
-    py3: python3.6
 
+[testenv]
 deps = -rrequirements.txt
        -rtest-requirements.txt
 
@@ -22,14 +16,13 @@ commands =
 setenv =
     COVERAGE_FILE=.coverage.py2
 
-[testenv:py3-cov]
+[testenv:{py,py3}-cov]
 commands =
     py.test --cov=olm --cov-report term-missing --benchmark-disable --cov-branch
 setenv =
     COVERAGE_FILE=.coverage.py3
 
 [testenv:coverage]
-basepython = python3.6
 commands =
     coverage erase
     coverage combine
