Fix test compilation and run test with success Using command `./gradlew connectedAndroidTest` on an API 21 emulator

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,4 +19,5 @@
 #systemProp.https.proxyHost=batproxy
 #systemProp.http.proxyPort=8080
 
+android.useAndroidX=true
 org.gradle.configureondemand=false
