--- a/python/Makefile
+++ b/python/Makefile
@@ -1,7 +1,7 @@
 all: olm-python2 olm-python3
 
 OLM_HEADERS = ../include/olm/olm.h ../include/olm/inbound_group_session.h \
-	      ../include/olm/outbound_group_session.h \
+	      ../include/olm/outbound_group_session.h
 
 include/olm/olm.h: $(OLM_HEADERS)
 	mkdir -p include/olm
@@ -10,12 +10,15 @@ include/olm/olm.h: $(OLM_HEADERS)
 	echo 'void *memset(void *s, int c, size_t n);' >> include/olm/olm.h
 
 include/olm/pk.h: include/olm/olm.h ../include/olm/pk.h
-	$(CPP) -I dummy -I ../include -o include/olm/pk.h ../include/olm/pk.h
+	$(CPP) -I dummy  -I ../include -o include/olm/pk.h ../include/olm/pk.h
 
 include/olm/sas.h: include/olm/olm.h ../include/olm/sas.h
 	$(CPP) -I dummy -I ../include -o include/olm/sas.h ../include/olm/sas.h
 
-headers: include/olm/olm.h include/olm/pk.h include/olm/sas.h
+include/olm/error.h: include/olm/olm.h ../include/olm/error.h
+	$(CPP) -I dummy -I ../include -o include/olm/error.h ../include/olm/error.h
+
+headers: include/olm/olm.h include/olm/pk.h include/olm/sas.h include/olm/error.h
 
 olm-python2: headers
 	DEVELOP=$(DEVELOP) python2 setup.py build
