Add some more files to .gitignore
- `compile_commands.json`: clang compilation database
- `.ccls-cache`: Cache directory for the ccls language server
- `.clang-format`: clang formatting description

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /python/dist
 /javascript/checksums.txt
 /javascript/checksums.txt.asc
+/compile_commands.json
+/.clang-format
+.ccls-cache/
 
 # Xcode
 build/
