--- a/xcode/Podfile
+++ b/xcode/Podfile
@@ -1,7 +1,21 @@
-target "OLMKit" do
-pod 'OLMKit', :path => '../OLMKit.podspec'
-end
+abstract_target 'OLMKit' do
 
-target "OLMKitTests" do
-pod 'OLMKit', :path => '../OLMKit.podspec'
+	pod 'OLMKit', :path => '../OLMKit.podspec'
+
+	target 'OLMKit-iOS' do
+
+		platform :ios, '6.0'
+
+		target 'OLMKitTests-iOS' do
+			inherit! :search_paths
+		end
+	end
+
+	target 'OLMKit-macOS' do
+		platform :osx, '10.9'
+
+		target 'OLMKitTests-macOS' do
+			inherit! :search_paths
+		end
+	end
 end
