--- a/python/Makefile
+++ b/python/Makefile
@@ -1,4 +1,4 @@
-all: olm-python2 olm-python3
+all: olm-python3
 
 OLM_HEADERS = ../include/olm/olm.h ../include/olm/inbound_group_session.h \
 	      ../include/olm/outbound_group_session.h
@@ -20,27 +20,16 @@ include/olm/error.h: include/olm/olm.h ../include/olm/error.h
 
 headers: include/olm/olm.h include/olm/pk.h include/olm/sas.h include/olm/error.h
 
-olm-python2: headers
-	DEVELOP=$(DEVELOP) python2 setup.py build
-
-olm-python3: headers
-	DEVELOP=$(DEVELOP) python3 setup.py build
-
-install: install-python2 install-python3
-
-install-python2: olm-python2
-	python2 setup.py install --skip-build -O1 --root=$(DESTDIR)
+install: install-python3
 
 install-python3: olm-python3
 	python3 setup.py install --skip-build -O1 --root=$(DESTDIR)
 
-test: olm-python2 olm-python3
+test: olm-python3
 	rm -rf install-temp
 	mkdir -p install-temp/2 install-temp/3
-	PYTHONPATH=install-temp/2 python2 setup.py install --skip-build --install-lib install-temp/2 --install-script install-temp/bin
 	PYTHONPATH=install-temp/3 python3 setup.py install --skip-build --install-lib install-temp/3 --install-script install-temp/bin
 	PYTHONPATH=install-temp/3 python3 -m pytest
-	PYTHONPATH=install-temp/2 python2 -m pytest
 	PYTHONPATH=install-temp/3 python3 -m pytest --flake8 --benchmark-disable
 	PYTHONPATH=install-temp/3 python3 -m pytest --isort --benchmark-disable
 	PYTHONPATH=install-temp/3 python3 -m pytest --cov --cov-branch --benchmark-disable
@@ -57,4 +46,4 @@ clean:
 	rm -rf install-temp/
 	rm -rf include/
 
-.PHONY: all olm-python2 olm-python3 install install-python2 install-python3 clean test
+.PHONY: all olm-python3 install install-python3 clean test
