--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         // Release notes of Android Gradle Plugin (AGP):
         // https://developer.android.com/studio/releases/gradle-plugin
         classpath 'com.android.tools.build:gradle:7.0.4'
-
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,6 +19,14 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+    }
+
+    plugins.withId("com.vanniktech.maven.publish") {
+        // Publish on s01.oss.sonatype.org
+        //https://github.com/vanniktech/gradle-maven-publish-plugin#where-to-upload-to
+        mavenPublish {
+            sonatypeHost = "S01"
+        }
     }
 }
 
