--- a/android/olm-sdk/build.gradle
+++ b/android/olm-sdk/build.gradle
@@ -1,8 +1,7 @@
 import org.apache.tools.ant.taskdefs.condition.Os
 
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
+apply plugin: "com.vanniktech.maven.publish"
 
 android {
     compileSdk 31
@@ -11,6 +10,8 @@ android {
         minSdk 14
         targetSdk 31
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField "String", "OLM_VERSION", "\"${project.getProperties().getOrDefault("VERSION_NAME", "0.0.0")}\""
 
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
@@ -157,36 +158,4 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.4.0'
     androidTestImplementation 'androidx.test:rules:1.4.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-}
-
-project.afterEvaluate {
-    publishing {
-        publications {
-            release(MavenPublication) {
-                from components.release
-                artifact androidJavadocsJar
-                artifact androidSourcesJar
-                groupId = project.getProperties().getOrDefault("GROUP", "org.matrix.android")
-                artifactId = project.getProperties().getOrDefault("ARTIFACT_ID", "olm")
-                version = project.getProperties().getOrDefault("VERSION_NAME", "0.0.0")
-            }
-        }
-        repositories {
-            maven {
-                url "https://gitlab.matrix.org/api/v4/projects/27/packages/maven"
-                credentials(HttpHeaderCredentials) {
-                    name = System.getenv("REPO_TOKEN_TYPE")
-                    value = System.getenv("REPO_TOKEN")
-                }
-                authentication {
-                    header(HttpHeaderAuthentication)
-                }
-            }
-        }
-    }
-
-    signing {
-        useGpgCmd()
-        sign publishing.publications.release
-    }
 }
