--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         // Release notes of Android Gradle Plugin (AGP):
         // https://developer.android.com/studio/releases/gradle-plugin
         classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.17.0'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.18.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -21,11 +21,14 @@ allprojects {
         google()
     }
 
-    plugins.withId("com.vanniktech.maven.publish") {
-        // Publish on s01.oss.sonatype.org
-        //https://github.com/vanniktech/gradle-maven-publish-plugin#where-to-upload-to
-        mavenPublish {
-            sonatypeHost = "S01"
+    plugins.withId("com.vanniktech.maven.publish.base") {
+       group = project.getProperties().getOrDefault("GROUP", "0.0.0")
+       version = project.getProperties().getOrDefault("VERSION_NAME", "name")
+
+        mavenPublishing {
+            publishToMavenCentral("S01")
+            pomFromGradleProperties()
+            signAllPublications()
         }
     }
 }
