Update POM_SCM_CONNECTION and POM_SCM_DEV_CONNECTION values

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -40,8 +40,8 @@ POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 
 POM_SCM_URL=https://gitlab.matrix.org/matrix-org/olm
-POM_SCM_CONNECTION=scm:git:git://gitlab.matrix.org/matrix-org/olm.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://git@gitlab.matrix.org/matrix-org/olm.git
+POM_SCM_CONNECTION=scm:git:https://gitlab.matrix.org/matrix-org/olm.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@gitlab.int.matrix.org:matrix-org/olm.git
 
 POM_DEVELOPER_ID=matrixdev
 POM_DEVELOPER_NAME=matrixdev
