fix tox config to work with newer version

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -6,7 +6,7 @@ envlist = py27,py36,pypy,{py2,py3}-cov,coverage
 deps = -rrequirements.txt
        -rtest-requirements.txt
 
-passenv = TOXENV CI TRAVIS TRAVIS_*
+passenv = TOXENV,CI,TRAVIS,TRAVIS_*
 commands = pytest --benchmark-disable
 usedevelop = True
 
