Update repo URL

--- a/javascript/package.json
+++ b/javascript/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.matrix.org/matrix-org/olm.git"
+    "url": "git+https://github.com/CommE2E/olm.git"
   },
   "license": "Apache-2.0",
   "devDependencies": {
